migdb.qvto/transforms/tests/validator_app/test_err_invalid_03_required.qvto
import builder_app;
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_03_required(out outModel : ERR);


main() {
	var errorMessage : String := "Structure contains cycled hierarchy:\"Country\", \"Country\"...";
	var error : Error := _validationError(errorMessage, "validator_app.qvto"); 
	_errorLog(OrderedSet{error});	 
}