migdb.qvto/transforms/tests/errors/error_extractClass1b_required.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation errors_extractClass1b_required(out inoutModel : ERR);

main(){
	var notExistClsMessage : String := "Structure doesn't contains standardClass called First";
	var notExistClsError : EvolutionError := _evolutionError(
													1, 
													notExistClsMessage, 
													"evolution_app.qvto");
	_errorLog(OrderedSet{notExistClsError});
}